--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,124 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfólio de Yasmim Araujo</title>
+    <style>
+        /* Reset básico */
+        body, h1, h2, p, ul, li {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            color: #fff;
+            background: linear-gradient(180deg, #002046, #0058a3);
+            line-height: 1.6;
+        }
+
+        .header {
+            text-align: center;
+            padding: 20px;
+        }
+
+        .profile {
+            margin-bottom: 20px;
+        }
+
+        .profile-img {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            margin-bottom: 15px;
+        }
+
+        .nav ul {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+            list-style: none;
+        }
+
+        .nav a {
+            text-decoration: none;
+            color: #fff;
+            font-weight: bold;
+        }
+
+        .section {
+            padding: 50px 20px;
+            text-align: center;
+        }
+
+        .about p {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        .works .work-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
+
+        .work-item {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 15px;
+            border-radius: 8px;
+        }
+
+        .summary a {
+            color: #ffd700;
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <header class="header">
+        <div class="profile">
+            <img src="https://yasspudiim.github.io/Portif-lioYasmim/WhatsApp%20Image%202024-11-12%20at%2023.51.04.jpeg" alt="Foto de Yasmim Araujo" class="profile-img">
+            <h1>OLÁ</h1>
+            <h2>Sou a Yasmim Araujo!</h2>
+        </div>
+        <nav class="nav">
+            <ul>
+                <li><a href="#resumo">Resumo</a></li>
+                <li><a href="#trabalhos">Trabalhos</a></li>
+                <li><a href="#sobre">Sobre Mim</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="sobre" class="section about">
+        <h2>Sobre Mim</h2>
+        <p>Sou estudante de design gráfico e crio soluções visuais criativas e impactantes. No meu portfólio, você encontra projetos como posts para Instagram e identidades visuais para empresas fictícias.</p>
+    </section>
+
+    <section id="trabalhos" class="section works">
+        <h2>Trabalhos</h2>
+        <div class="work-grid">
+            <div class="work-item">Post para Instagram</div>
+            <div class="work-item">Post para Instagram</div>
+            <div class="work-item">Post para Instagram</div>
+            <div class="work-item">Post para Instagram</div>
+        </div>
+    </section>
+
+    <section id="resumo" class="section summary">
+        <h2>Resumo</h2>
+        <p>Agradeço imensamente pela sua atenção e por dedicar seu tempo para conhecer meu trabalho. Fico à disposição...</p>
+        <p>Contato: <a href="mailto:yasmimaraujoos270@gmail.com">yasmimaraujoos270@gmail.com</a></p>
+    </section>
+</body>
+</html>
+
+
+
+
+
 
