--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -27,6 +26,13 @@
             font-size: 1.2em;
             margin-top: 10px;
             font-weight: normal;
+        }
+
+        .profile-img {
+            width: 150px; /* Ajuste o tamanho da imagem */
+            height: 150px; /* Mantém a proporção */
+            border-radius: 50%; /* Deixa a imagem redonda */
+            margin-top: 20px;
         }
 
         nav {
@@ -114,6 +120,7 @@
 <header>
     <h1>OLÁ</h1>
     <h2>Sou a Yasmim Araujo!</h2>
+    <img src="https://yasspudiim.github.io/Portif-lioYasmim/WhatsApp%20Image%202024-11-12%20at%2023.51.04.jpeg" alt="Foto de Yasmim Araujo" class="profile-img">
 </header>
 
 <nav>
@@ -124,7 +131,7 @@
 
 <section id="sobre-mim">
     <h2>Sobre Mim</h2>
-    <p>Sou estudante de design gráfico e crio soluções visuais criativas e impactantes. No meu portfólio, você encontra projetos como posts para Instagram e identidades visuais para empresas fictícias, sempre buscando inovar e atender às necessidades de cada cliente.</p>
+    <p>Sou estudante de design gráfico e crio soluções visuais criativas e impactantes. No meu portifólio, você encontra projetos como posts para Instagram e projetos pessoais, sempre buscando inovar e atender às necessidades de cada cliente.</p>
 </section>
 
 <section id="trabalhos">
@@ -152,4 +159,5 @@
     <p>E-mail: <a href="mailto:yasmimaraujoos270@gmail.com">yasmimaraujoos270@gmail.com</a></p>
 </section>
 
+</body>
 </html>
